Use List.getFirst()/getLast() and make Token fields final
- Replace .get(0) with getFirst() and .get(size() - 1) with getLast() (Java 21
  SequencedCollection) in CalculatorEngineUtils and Tokenizer. All call sites are guarded
  by a prior isEmpty() check, so the getFirst/getLast empty-list contract is respected.
- Make Token's type/value fields final: they are only ever set through the Lombok
  @AllArgsConstructor and never mutated, so final documents and enforces that immutability.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>